[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
    {name = "Ruslan Sergeev", email = "mybox.sergeev@gmail.com"},
]
description = "A PyTorch solution for CartPole problem using PPO algorithm"
name = "cartpole-ppo"
version = "0.1.0"
requires-python = ">= 3.7, < 3.10"
dependencies = []

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
pip = ">=25.0.1"
mujoco = {version = "==3.3.1"}

[tool.pixi.project]
platforms = ["linux-64"]
channels = ["conda-forge"]

[tool.pixi.pypi-dependencies]
tqdm = "*"
pytorch-lightning = "*"
numpy = "*"
ipython = "*"
loguru = "*"
cartpole_ppo = {path = ".", editable = true}

[tool.pixi.feature.torch_cpu.pypi-dependencies]
torch = { version = "==2.6.0+cpu", index = "https://download.pytorch.org/whl/cpu/"}

[tool.pixi.feature.torch_cuda.pypi-dependencies]
torch = { version = "==2.6.0+cu126", index = "https://download.pytorch.org/whl/cu126/"}

[tool.pixi.environments]
cpu = {features = ["torch_cpu"], solve-group = "cpu"}
cuda = {features = ["torch_cuda"], solve-group = "cuda"}
